--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     --green-800: #00474B;
     --light-green: #26C2AE;
     --white: #FFFFFF;
+    --green-hover: #9FE8DF;
+    --danger: #e17457;
 }
 
 body  {
@@ -48,7 +50,7 @@ main {
 }
 
 .conta div,
-.pessoas div {
+.pessoas .input-box {
     margin-top: 0.4rem;
     background-color: var(--green-100);
     padding: 0.4rem 1.2rem;
@@ -76,8 +78,13 @@ main {
 }
 
 .conta:has(input:focus) div,
-.pessoas:has(input:focus) div{
+.conta:has(input:hover) div,
+.pessoas:has(input:focus) .input-box,
+.pessoas:has(input:hover) .input-box,
+.gorjeta #outra:focus,
+.gorjeta #outra:hover{
     outline: 2px solid var(--light-green);
+    cursor: pointer;
 }
 
 
@@ -101,6 +108,12 @@ main {
     color: var(--white);
 }
 
+.gorjeta input[type="button"]:hover,
+.resultados button:hover {
+    background-color: var(--green-hover);
+    cursor: pointer;
+}
+
 .gorjeta #outra {
     width: 100%;
     background-color: var(--green-100);
@@ -111,8 +124,21 @@ main {
     color: var(--green-300);
 }
 
+.pessoas .textos {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pessoas #erro-div {
+    outline: 2px solid var(--danger);
+}
+
 .pessoas #erro {
-    display: none;
+   font-size: 0.75rem;
+   color: var(--danger);
+   font-weight: 700;
+   display: none;
 }
 
 .resultados {
@@ -162,6 +188,12 @@ main {
     padding-block: 0.5rem;
 }
 
+.conta input::-webkit-inner-spin-button,
+.pessoas input::-webkit-inner-spin-button,
+.gorjeta #outra::-webkit-inner-spin-button {
+    display: none;
+}
+
 @media(min-width: 920px) {
 
     body {
@@ -189,10 +221,6 @@ main {
         width: 100%;
     }
 
-    .conta input::-webkit-inner-spin-button,
-    .pessoas input::-webkit-inner-spin-button {
-        display: none;
-    }
 
     .gorjeta div {
         grid-template-columns: 1fr 1fr 1fr;
